# Sagasmith-dnd

./: .gitattributes  .gitignore  INSTALL.md  README-en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: runtime-reference-index.md
resources/skills/dnd-dm/: SKILL.md
resources/templates/: AGENTS.md  SOUL.md  USER.md
schemas/: mechanic-ir-v1.schema.json  rule-pack-v1.schema.json
src/sagasmith_dnd/: __init__.py  ability_generation.py  activities.py  advancement.py  character_import.py  character_schema.py  checks.py  cli.py  combat.py  combat_engine.py  concentration.py  conditions.py  consumables.py  content_compiler.py  content_import.py  core_content.py  core_rule_pack.py  damage.py  derived.py  document_contracts.py  durations.py  effects.py  engine.py  lifecycle.py  module_profile.py  pack_importer.py  playthrough.py  progression.py  random_stream.py  ready.py  regions.py  rests.py  rolls.py  rule_engine.py  rule_providers.py  rulesets.py  runtime.py  server.py  spatial.py  spell_resolution.py  (+6 more)
src/sagasmith_dnd/data/rulesets/: dnd5e-2014.json  dnd5e-2024.json
src/sagasmith_dnd/data/schemas/: ruleset.schema.json
tests/: test_ability_generation.py  test_action_economy_cli.py  test_active_effects_cli.py  test_activities.py  test_activity_documents_cli.py  test_activity_execution_cli.py  test_actor_derived_cli.py  test_actor_documents_cli.py  test_actor_rolls_cli.py  test_advancement_cli.py  test_character_import.py  test_character_schema.py  test_check_cli.py  test_cli.py  test_combat_cli.py  test_combat_engine.py  test_concentration_cli.py  test_consumables.py  test_content_compiler.py  test_content_import.py  test_core_content.py  test_core_integration.py  test_core_rule_pack.py  test_cover_cli.py  test_document_conditions_cli.py  test_document_damage_cli.py  test_document_rest_cli.py  test_duration_periods_cli.py  test_foundry_style_runtime_cli.py  test_game_item_activity_cli.py  test_item_cli.py  test_lifecycle.py  test_module_profile.py  test_pack_importer_cli.py  test_playthrough.py  test_preserved_rule_boundaries.py  test_progression.py  test_random_stream.py  test_ready_cli.py  test_rule_engine.py  (+8 more)
