[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagasmith-dnd"
version = "0.2.0"
description = "D&D 5e 2014/2024 runtime and portable JSON CLI for SagaSmith Core"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SagaSmithAI" }]
dependencies = ["sagasmith-core>=0.2.0,<0.3.0"]

[project.optional-dependencies]
dense = [
    "sentence-transformers>=5.0.0,<6.0.0",
    "chromadb>=0.6.0,<1.0.0",
]
documents = ["sagasmith-core[documents]>=0.2.0,<0.3.0"]
all = [
    "sagasmith-core[documents,embedding,vector]>=0.2.0,<0.3.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sagasmith-dnd = "sagasmith_dnd.cli:main"

[project.entry-points."sagasmith.systems"]
dnd5e = "sagasmith_dnd.system:get_system"

[tool.hatch.build.targets.wheel]
packages = ["src/sagasmith_dnd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
